Add unit tests for dashboard metrics and policy functions
- Implement tests for role-scoped route access control.
- Verify site filtering for site managers and security guards.
- Check site selection permissions for different user roles.
- Test site selection behavior with valid and stale preferences.
- Validate occupancy metrics calculation based on slot states.
- Canonicalize Vietnamese plate formats and validate plate queries.